# some-to-err

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs
