[package]
name = "some-to-err"
version = "0.2.0"
authors = ["cyphersnake <cyphersnake@pm.me>"]
description = "A set of traits for converting `Option` to `Result`, providing methods to transform `Some` values to `Err` while handling `None` values as `Ok`, either directly or using a closure to generate the Ok result."
repository = "https://github.com/cyphersnake/some-to-err"
homepage = "https://github.com/cyphersnake/some-to-err"
keywords = ["option", "result", "conversion", "utilities"]
edition = "2021"
license = "MIT"

[dependencies]
